fix: glitching dots on mobile

--- a/src/component/TableOfContents/TableOfContents.module.scss
+++ b/src/component/TableOfContents/TableOfContents.module.scss
@@ -86,7 +86,7 @@
     border: none;
 
     &.drew .tag {
-      // border: none;
+      border-color: transparent;
     }
   }
 }
